# A3-Redlines-Logistics

./: .gitignore  README.md  license.txt  pyproject.toml
a3_logistics/: hooks.py  modules.txt
a3_logistics/a3_logistics/doctype/a3_logistics_settings/: a3_logistics_settings.json  a3_logistics_settings.py
a3_logistics/a3_logistics/doctype/air_freight_tariff/: air_freight_tariff.json  air_freight_tariff.py
a3_logistics/a3_logistics/doctype/air_shipment_details/: air_shipment_details.json  air_shipment_details.py
a3_logistics/a3_logistics/doctype/air_shipment_package/: air_shipment_package.json  air_shipment_package.py
a3_logistics/a3_logistics/doctype/container_type/: container_type.json  container_type.py
a3_logistics/a3_logistics/doctype/customs_charges/: customs_charges.json  customs_charges.py
a3_logistics/a3_logistics/doctype/customs_clearance_details/: customs_clearance_details.json  customs_clearance_details.py
a3_logistics/a3_logistics/doctype/packing_charges/: packing_charges.json  packing_charges.py
a3_logistics/a3_logistics/doctype/packing_specification/: packing_specification.json  packing_specification.py
a3_logistics/a3_logistics/doctype/packing_specification_item/: packing_specification_item.json  packing_specification_item.py
a3_logistics/a3_logistics/doctype/packing_type/: packing_type.json  packing_type.py
a3_logistics/events/: billing.py  opportunity.py
a3_logistics/fixtures/: role.json
a3_logistics/overrides/: opportunity_dashboard.py
a3_logistics/setup/: install.py
a3_logistics/web_api/: api.py
(+24 files in other folders)
