[project]
name = "a3_logistics"
authors = [
    { name = "Acube", email = "acube@acube.co"}
]
description = "A3 Logistics — backend business logic for new logistics service verticals (3PL, Air, Sea, Customs, Industrial Packing, Relocation)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
